# operating_system-freebsd

./: .gitignore  CMakeCache.txt  _.cmake  stl_prefix.h
aaa_operating-system/freebsd/gnome/14/: package_map.txt
aaa_operating-system/freebsd/kde/14/: package_map.txt
aaa_want_to_remove_include/valgrind/: pub_tool_basics.h  pub_tool_redir.h  pub_tool_vki.h
acme_freebsd/: CMakeLists.txt  _.cpp  _.h  _acme_freebsd.h  _factory.cpp  aaa_dir_system.h  acme_dir.cpp  acme_dir.h  acme_directory.cpp  acme_directory.h  acme_file.cpp  acme_file.h  acme_path.cpp  acme_path.h  calculate_edesktop.cpp  dir_context.cpp  dir_context.h  directory_context.cpp  directory_context.h  directory_system.cpp  directory_system.h  factory_exchange.cpp  file.cpp  file.cpp.1  file.h  file.h.1  file_context.cpp  file_context.h  file_system.cpp  file_system.h  framework.h  get_executable_path.cpp  list_loaded_modules.cpp  node.cpp  node.h  path_system.cpp  path_system.h  processes_identifiers.cpp
apex_freebsd/: CMakeLists.txt  _.cpp  _.h  _apex_freebsd.h  _apex_windows.vcxproj  _apex_windows_vs12.vcxproj  _factory.cpp  a.h  aaa_application.cpp  aaa_crypto.cpp  aaa_factory_exchange1.cpp  aaa_interprocess_communication.cpp  aaa_interprocess_communication.h  aaa_node_windows.h  aaa_os_context.cpp  aaa_os_context.h  aaa_trace.cpp  aaa_want_to_remove_handle.cpp  aaa_want_to_remove_handle.h  aaa_want_to_remove_printer.cpp  aaa_want_to_remove_printer.h  aaa_want_to_remove_shell1.cpp  aaa_windows.h  apex_windows.def  apex_windows.vcxproj  application.cpp  crypto.cpp  crypto.h  dir_context.cpp  dir_context.h  dir_system.cpp  dir_system.h  factory_exchange.cpp  factory_exchange.h  file_context.cpp  file_context.h  file_system.cpp  file_system.h  framework.h  interprocess_communication.cpp  (+15 more)
app/: app.cpp
audio_alsa/: factory_exchange.cpp
aura_freebsd/: CMakeLists.txt  _.h  _aura_freebsd.h  _factory.cpp  aaa_bitmap.cpp  aaa_font.cpp  aaa_graphics.cpp  aaa_image.cpp  aaa_pen.cpp  aaa_region.cpp  appindicator.cpp  appindicator.h  factory_exchange.cpp  framework.h  interaction_impl.cpp  interaction_impl.h  node.cpp  node.h
configuration/ffmpeg/: config.h
desktop_environment_gnome/: CMakeLists.txt  _.cpp  _desktop_environment_gnome.h  _factory.cpp  appindicator.h  copydesk.cpp  factory_exchange.cpp  framework.h  gdk.cpp  node.cpp  node.h  notify_icon.cpp  notify_icon.h  user.cpp
desktop_environment_gnome/aura/: gnome.cpp  gnome_direct.cpp
desktop_environment_gtk_based/: CMakeLists.txt  _.h  _factory.cpp  aaa_gdk.cpp  display.h  monitor.cpp  node.cpp  node.h  notify_icon.cpp  notify_icon.h
desktop_environment_kde/: CMakeLists.txt  _.h  _desktop_environment_kde.h  _factory.cpp  copydesk.cpp  factory_exchange.cpp  framework.h  node.cpp  node.h  node_gnome.cbp
desktop_environment_kde/aura/: gnome.cpp  gnome_direct.cpp
desktop_environment_xfce/: CMakeLists.txt  _factory.cpp  copydesk.cpp  gdk.cpp  node.cpp  node.h  node_xfce.cbp  notify_icon.cpp  notify_icon.h  user.cpp
desktop_environment_xfce/aura/: xfce.cpp  xfce_direct.cpp
music_midi_alsa/: music_midi_alsa.cbp  music_midi_alsa__factory.cpp
node_freebsd/: CMakeLists.txt  _.h  _factory.cpp  aaa_node.cpp  aaa_node.h  factory_exchange.cpp  framework.h  graphics.cpp  node.cpp  node.h  path.cpp
operating-system/freebsd/gnome/14/: package_map.txt
operating-system/freebsd/kde/14/: package_map.txt
operating_ambient_gtk3/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _references.txt  aaa_appindicator.h  aaa_display.h  aaa_operating_ambient_gtk3.h  framework.h  node.cpp  node.h
operating_ambient_gtk4/: CMakeLists.txt  _.h  _factory.cpp  _references.txt  node.cpp  node.h
operating_ambient_gtk_based/: CMakeLists.txt  _factory.cpp  node.h
operating_ambient_kde5/: CMakeLists.txt  node.cpp  node.h
operating_ambient_kde6/: CMakeLists.txt  _.h  _factory.cpp  _references.txt  node.cpp  node.h
operating_system/: _config.h  appconfig.h  config.h  configuration.h  system.h  types.h
operating_system/freebsd/14/: package_map.txt
operating_system/freebsd/gnome/14/: package_map.txt
operating_system/freebsd/kde/14/: package_map.txt
operating_system/freebsd/xfce/15/amd64/: package_map.txt
operating_system/valgrind/: config.h  pub_tool_machine.h  pub_tool_redir.h  pub_tool_vkiscnums_asm.h  valgrind.h
platform/: config.h  system.h
